Rebranded from Zclassic to Bitcoin Private
Links and genesis block building which used Zclassic remain unchanged.

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -10,7 +10,7 @@ Build-Depends: autoconf, automake, bsdmainutils, build-essential,
 Vcs-Git: https://github.com/zcash/zcash.git
 Vcs-Browser: https://github.com/zcash/zcash
 
-Package: zclassic
+Package: btcprivate
 Version: 1.0.6
 Depends: ${shlibs:Depends}
 Description: HTTPS for money.
